Deploy commit: Re-build .ipynb and .py files ae373762b4b45ab0994d6aa2c9f711652b52b24c

--- a/07-reproj.html
+++ b/07-reproj.html
@@ -176,7 +176,16 @@
 <h2 id="toc-title">Table of contents</h2>
 <ul>
 <li><a href="#introduction" class="nav-link active" data-scroll-target="#introduction"> <span class="header-section-number">7.1</span> Introduction</a></li>
-<li><a href="#exercises" class="nav-link" data-scroll-target="#exercises"> <span class="header-section-number">7.2</span> Exercises</a></li>
+<li><a href="#introduction-1" class="nav-link" data-scroll-target="#introduction-1"> <span class="header-section-number">7.2</span> Introduction</a></li>
+<li><a href="#coordinate-reference-systems" class="nav-link" data-scroll-target="#coordinate-reference-systems"> <span class="header-section-number">7.3</span> Coordinate Reference Systems</a></li>
+<li><a href="#querying-and-setting-coordinate-systems" class="nav-link" data-scroll-target="#querying-and-setting-coordinate-systems"> <span class="header-section-number">7.4</span> Querying and setting coordinate systems</a></li>
+<li><a href="#geometry-operations-on-projected-and-unprojected-data" class="nav-link" data-scroll-target="#geometry-operations-on-projected-and-unprojected-data"> <span class="header-section-number">7.5</span> Geometry operations on projected and unprojected data</a></li>
+<li><a href="#when-to-reproject" class="nav-link" data-scroll-target="#when-to-reproject"> <span class="header-section-number">7.6</span> When to reproject?</a></li>
+<li><a href="#which-crs-to-use" class="nav-link" data-scroll-target="#which-crs-to-use"> <span class="header-section-number">7.7</span> Which CRS to use?</a></li>
+<li><a href="#reprojecting-vector-geometries" class="nav-link" data-scroll-target="#reprojecting-vector-geometries"> <span class="header-section-number">7.8</span> Reprojecting vector geometries</a></li>
+<li><a href="#reprojecting-raster-geometries" class="nav-link" data-scroll-target="#reprojecting-raster-geometries"> <span class="header-section-number">7.9</span> Reprojecting raster geometries</a></li>
+<li><a href="#custom-map-projections" class="nav-link" data-scroll-target="#custom-map-projections"> <span class="header-section-number">7.10</span> Custom map projections</a></li>
+<li><a href="#exercises" class="nav-link" data-scroll-target="#exercises"> <span class="header-section-number">7.11</span> Exercises</a></li>
 </ul>
 <div class="toc-actions"><div><i class="bi bi-github"></i></div><div class="action-links"><p><a href="https://github.com/geocompr/py/edit/main/07-reproj.qmd" class="toc-action">Edit this page</a></p></div></div></nav>
     </div>
@@ -189,8 +198,35 @@
 <section id="introduction" class="level2" data-number="7.1">
 <h2 data-number="7.1" class="anchored" data-anchor-id="introduction"><span class="header-section-number">7.1</span> Introduction</h2>
 </section>
-<section id="exercises" class="level2" data-number="7.2">
-<h2 data-number="7.2" class="anchored" data-anchor-id="exercises"><span class="header-section-number">7.2</span> Exercises</h2>
+<section id="introduction-1" class="level2" data-number="7.2">
+<h2 data-number="7.2" class="anchored" data-anchor-id="introduction-1"><span class="header-section-number">7.2</span> Introduction</h2>
+</section>
+<section id="coordinate-reference-systems" class="level2" data-number="7.3">
+<h2 data-number="7.3" class="anchored" data-anchor-id="coordinate-reference-systems"><span class="header-section-number">7.3</span> Coordinate Reference Systems</h2>
+</section>
+<section id="querying-and-setting-coordinate-systems" class="level2" data-number="7.4">
+<h2 data-number="7.4" class="anchored" data-anchor-id="querying-and-setting-coordinate-systems"><span class="header-section-number">7.4</span> Querying and setting coordinate systems</h2>
+</section>
+<section id="geometry-operations-on-projected-and-unprojected-data" class="level2" data-number="7.5">
+<h2 data-number="7.5" class="anchored" data-anchor-id="geometry-operations-on-projected-and-unprojected-data"><span class="header-section-number">7.5</span> Geometry operations on projected and unprojected data</h2>
+</section>
+<section id="when-to-reproject" class="level2" data-number="7.6">
+<h2 data-number="7.6" class="anchored" data-anchor-id="when-to-reproject"><span class="header-section-number">7.6</span> When to reproject?</h2>
+</section>
+<section id="which-crs-to-use" class="level2" data-number="7.7">
+<h2 data-number="7.7" class="anchored" data-anchor-id="which-crs-to-use"><span class="header-section-number">7.7</span> Which CRS to use?</h2>
+</section>
+<section id="reprojecting-vector-geometries" class="level2" data-number="7.8">
+<h2 data-number="7.8" class="anchored" data-anchor-id="reprojecting-vector-geometries"><span class="header-section-number">7.8</span> Reprojecting vector geometries</h2>
+</section>
+<section id="reprojecting-raster-geometries" class="level2" data-number="7.9">
+<h2 data-number="7.9" class="anchored" data-anchor-id="reprojecting-raster-geometries"><span class="header-section-number">7.9</span> Reprojecting raster geometries</h2>
+</section>
+<section id="custom-map-projections" class="level2" data-number="7.10">
+<h2 data-number="7.10" class="anchored" data-anchor-id="custom-map-projections"><span class="header-section-number">7.10</span> Custom map projections</h2>
+</section>
+<section id="exercises" class="level2" data-number="7.11">
+<h2 data-number="7.11" class="anchored" data-anchor-id="exercises"><span class="header-section-number">7.11</span> Exercises</h2>
 
 
 </section>
