--- a/08-read-write-plot.html
+++ b/08-read-write-plot.html
@@ -176,7 +176,22 @@
 <h2 id="toc-title">Table of contents</h2>
 <ul>
 <li><a href="#introduction" class="nav-link active" data-scroll-target="#introduction"> <span class="header-section-number">8.1</span> Introduction</a></li>
-<li><a href="#exercises" class="nav-link" data-scroll-target="#exercises"> <span class="header-section-number">8.2</span> Exercises</a></li>
+<li><a href="#retrieving-open-data" class="nav-link" data-scroll-target="#retrieving-open-data"> <span class="header-section-number">8.2</span> Retrieving open data</a></li>
+<li><a href="#geographic-data-packages" class="nav-link" data-scroll-target="#geographic-data-packages"> <span class="header-section-number">8.3</span> Geographic data packages</a></li>
+<li><a href="#geographic-web-services" class="nav-link" data-scroll-target="#geographic-web-services"> <span class="header-section-number">8.4</span> Geographic web services</a></li>
+<li><a href="#file-formats" class="nav-link" data-scroll-target="#file-formats"> <span class="header-section-number">8.5</span> File formats</a></li>
+<li><a href="#data-input-i" class="nav-link" data-scroll-target="#data-input-i"> <span class="header-section-number">8.6</span> Data input (I)</a>
+<ul class="collapse">
+<li><a href="#vector-data" class="nav-link" data-scroll-target="#vector-data"> <span class="header-section-number">8.6.1</span> Vector data</a></li>
+<li><a href="#raster-data" class="nav-link" data-scroll-target="#raster-data"> <span class="header-section-number">8.6.2</span> Raster data</a></li>
+</ul></li>
+<li><a href="#data-output-o" class="nav-link" data-scroll-target="#data-output-o"> <span class="header-section-number">8.7</span> Data output (O)</a>
+<ul class="collapse">
+<li><a href="#vector-data-1" class="nav-link" data-scroll-target="#vector-data-1"> <span class="header-section-number">8.7.1</span> Vector data</a></li>
+<li><a href="#raster-data-1" class="nav-link" data-scroll-target="#raster-data-1"> <span class="header-section-number">8.7.2</span> Raster data</a></li>
+</ul></li>
+<li><a href="#visual-outputs" class="nav-link" data-scroll-target="#visual-outputs"> <span class="header-section-number">8.8</span> Visual outputs</a></li>
+<li><a href="#exercises" class="nav-link" data-scroll-target="#exercises"> <span class="header-section-number">8.9</span> Exercises</a></li>
 </ul>
 <div class="toc-actions"><div><i class="bi bi-github"></i></div><div class="action-links"><p><a href="https://github.com/geocompr/py/edit/main/08-read-write-plot.qmd" class="toc-action">Edit this page</a></p></div></div></nav>
     </div>
@@ -189,8 +204,41 @@
 <section id="introduction" class="level2" data-number="8.1">
 <h2 data-number="8.1" class="anchored" data-anchor-id="introduction"><span class="header-section-number">8.1</span> Introduction</h2>
 </section>
-<section id="exercises" class="level2" data-number="8.2">
-<h2 data-number="8.2" class="anchored" data-anchor-id="exercises"><span class="header-section-number">8.2</span> Exercises</h2>
+<section id="retrieving-open-data" class="level2" data-number="8.2">
+<h2 data-number="8.2" class="anchored" data-anchor-id="retrieving-open-data"><span class="header-section-number">8.2</span> Retrieving open data</h2>
+</section>
+<section id="geographic-data-packages" class="level2" data-number="8.3">
+<h2 data-number="8.3" class="anchored" data-anchor-id="geographic-data-packages"><span class="header-section-number">8.3</span> Geographic data packages</h2>
+</section>
+<section id="geographic-web-services" class="level2" data-number="8.4">
+<h2 data-number="8.4" class="anchored" data-anchor-id="geographic-web-services"><span class="header-section-number">8.4</span> Geographic web services</h2>
+</section>
+<section id="file-formats" class="level2" data-number="8.5">
+<h2 data-number="8.5" class="anchored" data-anchor-id="file-formats"><span class="header-section-number">8.5</span> File formats</h2>
+</section>
+<section id="data-input-i" class="level2" data-number="8.6">
+<h2 data-number="8.6" class="anchored" data-anchor-id="data-input-i"><span class="header-section-number">8.6</span> Data input (I)</h2>
+<section id="vector-data" class="level3" data-number="8.6.1">
+<h3 data-number="8.6.1" class="anchored" data-anchor-id="vector-data"><span class="header-section-number">8.6.1</span> Vector data</h3>
+</section>
+<section id="raster-data" class="level3" data-number="8.6.2">
+<h3 data-number="8.6.2" class="anchored" data-anchor-id="raster-data"><span class="header-section-number">8.6.2</span> Raster data</h3>
+</section>
+</section>
+<section id="data-output-o" class="level2" data-number="8.7">
+<h2 data-number="8.7" class="anchored" data-anchor-id="data-output-o"><span class="header-section-number">8.7</span> Data output (O)</h2>
+<section id="vector-data-1" class="level3" data-number="8.7.1">
+<h3 data-number="8.7.1" class="anchored" data-anchor-id="vector-data-1"><span class="header-section-number">8.7.1</span> Vector data</h3>
+</section>
+<section id="raster-data-1" class="level3" data-number="8.7.2">
+<h3 data-number="8.7.2" class="anchored" data-anchor-id="raster-data-1"><span class="header-section-number">8.7.2</span> Raster data</h3>
+</section>
+</section>
+<section id="visual-outputs" class="level2" data-number="8.8">
+<h2 data-number="8.8" class="anchored" data-anchor-id="visual-outputs"><span class="header-section-number">8.8</span> Visual outputs</h2>
+</section>
+<section id="exercises" class="level2" data-number="8.9">
+<h2 data-number="8.9" class="anchored" data-anchor-id="exercises"><span class="header-section-number">8.9</span> Exercises</h2>
 
 
 </section>
