--- a/09-mapping.html
+++ b/09-mapping.html
@@ -176,7 +176,21 @@
 <h2 id="toc-title">Table of contents</h2>
 <ul>
 <li><a href="#introduction" class="nav-link active" data-scroll-target="#introduction"> <span class="header-section-number">9.1</span> Introduction</a></li>
-<li><a href="#exercises" class="nav-link" data-scroll-target="#exercises"> <span class="header-section-number">9.2</span> Exercises</a></li>
+<li><a href="#static-maps" class="nav-link" data-scroll-target="#static-maps"> <span class="header-section-number">9.2</span> Static maps</a>
+<ul class="collapse">
+<li><a href="#tmap-basics" class="nav-link" data-scroll-target="#tmap-basics"> <span class="header-section-number">9.2.1</span> tmap basics</a></li>
+<li><a href="#map-objects" class="nav-link" data-scroll-target="#map-objects"> <span class="header-section-number">9.2.2</span> Map objects</a></li>
+<li><a href="#aesthetics" class="nav-link" data-scroll-target="#aesthetics"> <span class="header-section-number">9.2.3</span> Aesthetics</a></li>
+<li><a href="#color-settings" class="nav-link" data-scroll-target="#color-settings"> <span class="header-section-number">9.2.4</span> Color settings</a></li>
+<li><a href="#layouts" class="nav-link" data-scroll-target="#layouts"> <span class="header-section-number">9.2.5</span> Layouts</a></li>
+<li><a href="#faceted-maps" class="nav-link" data-scroll-target="#faceted-maps"> <span class="header-section-number">9.2.6</span> Faceted maps</a></li>
+<li><a href="#inset-maps" class="nav-link" data-scroll-target="#inset-maps"> <span class="header-section-number">9.2.7</span> Inset maps</a></li>
+</ul></li>
+<li><a href="#animated-maps" class="nav-link" data-scroll-target="#animated-maps"> <span class="header-section-number">9.3</span> Animated maps</a></li>
+<li><a href="#interactive-maps" class="nav-link" data-scroll-target="#interactive-maps"> <span class="header-section-number">9.4</span> Interactive maps</a></li>
+<li><a href="#mapping-applications" class="nav-link" data-scroll-target="#mapping-applications"> <span class="header-section-number">9.5</span> Mapping applications</a></li>
+<li><a href="#other-mapping-packages" class="nav-link" data-scroll-target="#other-mapping-packages"> <span class="header-section-number">9.6</span> Other mapping packages</a></li>
+<li><a href="#exercises" class="nav-link" data-scroll-target="#exercises"> <span class="header-section-number">9.7</span> Exercises</a></li>
 </ul>
 <div class="toc-actions"><div><i class="bi bi-github"></i></div><div class="action-links"><p><a href="https://github.com/geocompr/py/edit/main/09-mapping.qmd" class="toc-action">Edit this page</a></p></div></div></nav>
     </div>
@@ -189,8 +203,44 @@
 <section id="introduction" class="level2" data-number="9.1">
 <h2 data-number="9.1" class="anchored" data-anchor-id="introduction"><span class="header-section-number">9.1</span> Introduction</h2>
 </section>
-<section id="exercises" class="level2" data-number="9.2">
-<h2 data-number="9.2" class="anchored" data-anchor-id="exercises"><span class="header-section-number">9.2</span> Exercises</h2>
+<section id="static-maps" class="level2" data-number="9.2">
+<h2 data-number="9.2" class="anchored" data-anchor-id="static-maps"><span class="header-section-number">9.2</span> Static maps</h2>
+<section id="tmap-basics" class="level3" data-number="9.2.1">
+<h3 data-number="9.2.1" class="anchored" data-anchor-id="tmap-basics"><span class="header-section-number">9.2.1</span> tmap basics</h3>
+</section>
+<section id="map-objects" class="level3" data-number="9.2.2">
+<h3 data-number="9.2.2" class="anchored" data-anchor-id="map-objects"><span class="header-section-number">9.2.2</span> Map objects</h3>
+</section>
+<section id="aesthetics" class="level3" data-number="9.2.3">
+<h3 data-number="9.2.3" class="anchored" data-anchor-id="aesthetics"><span class="header-section-number">9.2.3</span> Aesthetics</h3>
+</section>
+<section id="color-settings" class="level3" data-number="9.2.4">
+<h3 data-number="9.2.4" class="anchored" data-anchor-id="color-settings"><span class="header-section-number">9.2.4</span> Color settings</h3>
+</section>
+<section id="layouts" class="level3" data-number="9.2.5">
+<h3 data-number="9.2.5" class="anchored" data-anchor-id="layouts"><span class="header-section-number">9.2.5</span> Layouts</h3>
+</section>
+<section id="faceted-maps" class="level3" data-number="9.2.6">
+<h3 data-number="9.2.6" class="anchored" data-anchor-id="faceted-maps"><span class="header-section-number">9.2.6</span> Faceted maps</h3>
+</section>
+<section id="inset-maps" class="level3" data-number="9.2.7">
+<h3 data-number="9.2.7" class="anchored" data-anchor-id="inset-maps"><span class="header-section-number">9.2.7</span> Inset maps</h3>
+</section>
+</section>
+<section id="animated-maps" class="level2" data-number="9.3">
+<h2 data-number="9.3" class="anchored" data-anchor-id="animated-maps"><span class="header-section-number">9.3</span> Animated maps</h2>
+</section>
+<section id="interactive-maps" class="level2" data-number="9.4">
+<h2 data-number="9.4" class="anchored" data-anchor-id="interactive-maps"><span class="header-section-number">9.4</span> Interactive maps</h2>
+</section>
+<section id="mapping-applications" class="level2" data-number="9.5">
+<h2 data-number="9.5" class="anchored" data-anchor-id="mapping-applications"><span class="header-section-number">9.5</span> Mapping applications</h2>
+</section>
+<section id="other-mapping-packages" class="level2" data-number="9.6">
+<h2 data-number="9.6" class="anchored" data-anchor-id="other-mapping-packages"><span class="header-section-number">9.6</span> Other mapping packages</h2>
+</section>
+<section id="exercises" class="level2" data-number="9.7">
+<h2 data-number="9.7" class="anchored" data-anchor-id="exercises"><span class="header-section-number">9.7</span> Exercises</h2>
 
 
 </section>
